turtleart.lessons.turtleart.Main.Flower.scala.error
Source:16: error: missing parameter type for expanded function ((x$1) => 1.to(x$1))
	for (i<- 1 to _) {
                      ^